# INDOMINUS_OS

./: .gitignore  Cargo.toml  Makefile  README.md  STABILIZATION_PLAN.md  build.ps1  gen_user_program.py  generate_test_elf.py  indominus-x86_64.json  kernel.ld  run.bat  rust-toolchain.toml
.cargo/: config.toml
docs/: ARCHITECTURE_FOUNDATIONS.md  ERRORS_AND_FIXES.md  PHASE9_PLAN.md  REGRESSION_TEST.md  ROADMAP.md  SYSCALL_ABI.md  architecture.md  dev-env-setup.md  phase1-report.md  phase2-report.md
docs/architecture/: ADR-001-kernel-strategy.md
indo-boot/: Cargo.toml
indo-boot/.cargo/: config.toml
indo-boot/src/: main.rs
indo-kernel/: Cargo.toml  build.rs  kernel.ld
indo-kernel/src/: cpu.rs  fat32.rs  gdt.rs  idt.rs  initrd.rs  keyboard.rs  main.rs  panic.rs  serial.rs  sync_cell.rs  user_program.rs
indo-kernel/src/acpi/: madt.rs  mod.rs  rsdp.rs
indo-kernel/src/ahci/: hba.rs  mod.rs
indo-kernel/src/block/: mod.rs  ramdisk.rs  registry.rs
indo-kernel/src/debug/: mod.rs  paging_audit.rs
indo-kernel/src/elf/: mod.rs
indo-kernel/src/interrupts/: dispatch.rs  ioapic.rs  lapic.rs  mod.rs  pit.rs
indo-kernel/src/memory/: mod.rs  pmm.rs  vmm.rs
indo-kernel/src/mmio/: mod.rs
indo-kernel/src/pci/: mod.rs
indo-kernel/src/process/: context_switch.rs  idle.rs  init.rs  mod.rs  pipe.rs  process.rs  scheduler.rs  tasks.rs
indo-kernel/src/syscall/: errno.rs  mod.rs
indo-kernel/src/vfs/: mod.rs  ramfs.rs
libs/indo-core/: Cargo.toml
libs/indo-core/src/: lib.rs
src/: lib.rs
tools/: build_initrd.py  build_userspace.py  gen_comprehensive_test.py  gen_exit_test.py  gen_invalid_ptr.py  gen_invalid_syscall.py  gen_null_deref.py  gen_user_loop.py  gen_user_test.py  gen_userspace.py  regression_test.py  verify_kernel.py  verify_offsets.py
userspace/: x86_64-indominus.json
userspace/.cargo/: config.toml
userspace/init/: Cargo.toml
userspace/init/src/: lib.rs
userspace/rootfs/: hello.txt
userspace/shell/: Cargo.toml
userspace/shell/src/: lib.rs
userspace/syscall/: Cargo.toml
userspace/syscall/src/: lib.rs
