[package]
name        = "indo-kernel"
version     = "0.0.1-alpha"
edition     = "2021"
authors     = ["INDOMINUS OS Project"]
license     = "GPL-2.0-only"

[dependencies]
indo-core = { path = "../libs/indo-core" }
x86_64 = { version = "0.15.5", features = ["abi_x86_interrupt", "asm_const", "const_fn", "instructions", "nightly", "step_trait"] }
spin = "0.9.9"
bitflags = "2.13.1"
log = "0.4.33"
linked_list_allocator = "0.10.6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(DEBUG_KERNEL)'] }
